# RSMI

./: .gitignore  CMakeLists.txt  Makefile  cross-linux.cmake  data_generator.py  requirements.txt  sample_points_partial.py  sample_points_random.py
